--- a/admin/public/index.html
+++ b/admin/public/index.html
@@ -30,21 +30,22 @@
 
       <!-- HTML5shiv and Respond.js for IE8 to support HTML5 elements and media queries -->
 
-      <!--[if lte IE 8]>
-      <script src="assets/js/html5shiv.min.js"></script>
-      <script src="assets/js/respond.min.js"></script>
-      <![endif]-->
-
       <!-- basic scripts -->
 
       <!--[if !IE]> -->
-      <script src="assets/js/jquery-2.1.4.min.js"></script>
+      <script src="<%= BASE_URL %>ace/assets/js/jquery-2.1.4.min.js"></script>
 
       <!-- <![endif]-->
 
       <!--[if IE]>
-      <script src="assets/js/jquery-1.11.3.min.js"></script>
+      <script src="<%= BASE_URL %>ace/assets/js/jquery-1.11.3.min.js"></script>
       <![endif]-->
+      <!--[if lte IE 8]>
+      <script src="<%= BASE_URL %>ace/assets/js/html5shiv.min.js"></script>
+      <script src="<%= BASE_URL %>ace/assets/js/respond.min.js"></script>
+      <![endif]-->
+
+
       <script type="text/javascript">
           if('ontouchstart' in document.documentElement) document.write("<script src='assets/js/jquery.mobile.custom.min.js'>"+"<"+"/script>");
       </script>
