--- a/admin/public/index.html
+++ b/admin/public/index.html
@@ -68,8 +68,13 @@
   <script src="<%= BASE_URL %>ace/assets/js/ace-elements.min.js"></script>
   <script src="<%= BASE_URL %>ace/assets/js/ace.min.js"></script>
 
+  <!--  confirmation box and toast box-->
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
   <script src="<%= BASE_URL %>static/js/toast.js"></script>
+
+  <!--  loading wait-->
+  <script src="https://cdn.bootcss.com/jquery.blockUI/2.70.0-2014.11.23/jquery.blockUI.min.js"></script>
+  <script src="<%= BASE_URL %>static/js/loading.js"></script>
 
 
 </head>
