--- a/admin/public/index.html
+++ b/admin/public/index.html
@@ -71,6 +71,7 @@
   <!--  confirmation box and toast box-->
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
   <script src="<%= BASE_URL %>static/js/toast.js"></script>
+  <script src="<%= BASE_URL %>static/js/confirm.js"></script>
 
   <!--  loading wait-->
   <script src="https://cdn.bootcss.com/jquery.blockUI/2.70.0-2014.11.23/jquery.blockUI.min.js"></script>
