--- a/admin/public/index.html
+++ b/admin/public/index.html
@@ -77,6 +77,11 @@
   <script src="https://cdn.bootcss.com/jquery.blockUI/2.70.0-2014.11.23/jquery.blockUI.min.js"></script>
   <script src="<%= BASE_URL %>static/js/loading.js"></script>
 
+  <!--  util class  -->
+  <script src="<%= BASE_URL %>static/js/tool.js"></script>
+  <!--  validation class  -->
+  <script src="<%= BASE_URL %>static/js/validator.js"></script>
+
 
 </head>
 <body>
